--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+button {
+  background-color: steelblue;
+  border: 1px solid steelblue;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 20px 30px;
+  overflow: hidden;
+  margin: 10px 0;
+}
