--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 body {
-  background-color: #222;
-  font-family: "roboto", sans-serif;
+  background-color: #000;
+  font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
@@ -18,9 +18,9 @@ body {
 
 button {
   background-color: steelblue;
-  border: 1px solid steelblue;
-  font-size: 14px;
   color: #fff;
+  border: 1px steelblue solid;
+  font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding: 20px 30px;
@@ -28,6 +28,7 @@ button {
   margin: 10px 0;
   position: relative;
 }
+
 button:focus {
   outline: none;
 }
@@ -39,8 +40,9 @@ button .circle {
   height: 100px;
   border-radius: 50%;
   transform: translate(-50%, -50%) scale(0);
-  animation: scale 0.5 ease-out;
+  animation: scale 0.5s ease-out;
 }
+
 @keyframes scale {
   to {
     transform: translate(-50%, -50%) scale(3);
